<resources>
    <string name="app_name">教务管理系统</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="student">学生</string>
    <string name="daily">日志</string>
    <string name="score">成绩管理</string>
    <string name="mine">我的</string>
    <string name="old_score">该科往期成绩</string>
    <string name="score_now">最近一次考试</string>
    <string name="info_name">姓名</string>
    <string name="info_birth">生日</string>
    <string name="info_sex">性别</string>
    <string name="info_position">职位</string>
    <string name="info_num">学号</string>
    <string name="info_hobby">爱好</string>
    <string name="info_father_name">父亲</string>
    <string name="info_parent_number">联系方式</string>
    <string name="info_mother_name">母亲</string>
    <string name="info_check">考勤记录</string>
    <string name="teacher_id">工号</string>
    <string name="teacher_tel">电话号码</string>
    <string name="teacher_adress">家庭地址</string>
    <string name="menu_message">发送短信</string>
    <string name="menu_change_class">更换班级</string>
    <string name="menu_teacher">其它教师</string>
    <string name="add_class">添加班级</string>
    <string name="add_grade">添加成绩</string>
    <string name="add_test">添加考试</string>
    <string name="kebiao">添加/删除课程表</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
</resources>
