<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ace.easyteacher.View.XLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp">

                <com.ace.easyteacher.View.XLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#cddc39"
                    android:orientation="vertical">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/student_head"
                        android:layout_width="90.5dp"
                        android:layout_height="90.5dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        fresco:failureImage="@drawable/ic_no_photo"
                        fresco:placeholderImage="@drawable/ic_no_photo"
                        fresco:roundAsCircle="true" />

                    <TextView
                        android:id="@+id/class_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <com.ace.easyteacher.View.XRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_name"
                            android:textSize="12dp"
                            android:layout_marginLeft="6dp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/teacher_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textSize="12dp"
                            android:layout_marginRight="6dp"
                            tools:text="chenxiaoer" />
                    </com.ace.easyteacher.View.XRelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#d4d4d4" />

                    <com.ace.easyteacher.View.XRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/teacher_id"
                            android:textSize="12dp"
                            android:layout_marginLeft="6dp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/teacher_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textSize="12dp"
                            android:layout_marginRight="6dp"
                            tools:text="20120510291" />
                    </com.ace.easyteacher.View.XRelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#d4d4d4" />

                    <com.ace.easyteacher.View.XRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/teacher_tel"
                            android:textSize="12dp"
                            android:layout_marginLeft="6dp"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/teacher_tel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textSize="12dp"
                            android:layout_marginRight="6dp"
                            tools:text="男" />
                    </com.ace.easyteacher.View.XRelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#d4d4d4" />

                    <com.ace.easyteacher.View.XRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_marginLeft="6dp"
                            android:text="@string/teacher_adress"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/teacher_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp"
                            android:layout_marginRight="6dp"
                            android:layout_alignParentRight="true"
                            tools:text="1994-01-10" />
                    </com.ace.easyteacher.View.XRelativeLayout>
                </com.ace.easyteacher.View.XLinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="4dp">

                <com.ace.easyteacher.View.MaterialRippleLayout
                    android:id="@+id/kechengbiao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="班级课程表"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </com.ace.easyteacher.View.MaterialRippleLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="4dp">

                <com.ace.easyteacher.View.MaterialRippleLayout
                    android:id="@+id/check"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="班级考勤"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </com.ace.easyteacher.View.MaterialRippleLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="4dp">

                <com.ace.easyteacher.View.MaterialRippleLayout
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="修改密码"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </com.ace.easyteacher.View.MaterialRippleLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />
        </com.ace.easyteacher.View.XLinearLayout>
    </ScrollView>

</LinearLayout>